# cmpsc-600-dlholland

./: README.md  pyproject.toml  setup.py  setup.yaml
src/: monofile.py
src/scripts/: entry-point-locator.py  entry_point_locator.py  monofile  monofile.py  python-monofile.py
test-base/: dropbox-files.py  dropbox.team.py
test-base/bandit/bandit/: __init__.py  codon-script.py
test-base/bandit/bandit/cli/: main.py
test-base/bandit/bandit/core/: manager.py
test-base/bandit/examples/: bogus.py  cipher-modes.py  ciphers.py  crypto-md5.py  dill.py  django_sql_injection_raw.py  httpoxy_cgihandler.py  httpoxy_twisted_directory.py  httpoxy_twisted_script.py  imports-aliases.py  imports-from.py  imports-with-importlib.py  imports.py  jinja2_templating.py  jsonpickle.py  mako_templating.py  mark_safe_insecure.py  mark_safe_secure.py  marshal_deserialize.py  mktemp.py  new_candidates-all.py  new_candidates-nosec.py  new_candidates-some.py  os-popen.py  pandas_read_pickle.py  paramiko_injection.py  pickle_deserialize.py  popen_wrappers.py  pycrypto.py  pycryptodome.py  random_module.py  requests-missing-timeout.py  ssl-insecure-version.py  telnetlib.py  urlopen.py  weak_cryptographic_key_sizes.py  xml_etree_celementtree.py  xml_etree_elementtree.py  xml_expatbuilder.py  xml_expatreader.py  (+5 more)
test-base/bandit/tests/unit/core/: test_config.py  test_issue.py  test_manager.py  test_test_set.py
test-base/bandit/tests/unit/formatters/: test_csv.py  test_custom.py  test_html.py  test_json.py  test_screen.py  test_text.py  test_xml.py  test_yaml.py
