[tool.poetry]
name = "cmpsc-600-dlholland"
version = "0.1.0"
description = ""
authors = ["DlHolland <hettyist.dylan@gmail.com>"]
readme = "README.md"
packages = [{include = "cmpsc_600_dlholland"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
